added inset shadow on the box

--- a/App/SCSS/main.scss
+++ b/App/SCSS/main.scss
@@ -65,6 +65,8 @@ body {
       font-size: 2rem;
       border-radius: 10px;
 
+      box-shadow: inset 10px 10px 20px #111;
+
       color: #fff;
     }
 
